# L2Pipeline

./: CMakeLists.txt  README.md
scripts/: process_data.py  run_pipeline.sh
src/: main.cpp  parser.cpp  parser.h  utils.cpp  utils.h
